# cppgui

.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt
src/includes/: CMakeLists.txt
src/windowmanager/: CMakeLists.txt  windowmanager.cpp  windowmanager.h
src/windowmanager/errors/: CMakeLists.txt  errors.h
src/windowmanager/objects/: CMakeLists.txt
src/windowmanager/objects/drawables/: CMakeLists.txt
src/windowmanager/window/: CMakeLists.txt  window.h
